kubernetes/apps/metrics/headlamp/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics-headlamp-route
  namespace: traefik
spec:
  parentRefs:
    - name: cluster-edge-gateway
      namespace: traefik
  hostnames:
    - metrics.kwer.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /headlamp
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: metrics-basic-auth
      backendRefs:
        - name: headlamp
          port: 80
          namespace: kube-system
